--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     margin: 20px;
-    background-color: #94b9b0;
+    background-color: antiquewhite;
 }
 button {
     padding: 10px 15px;
